--- a/templates/films/latest_releases.html.twig
+++ b/templates/films/latest_releases.html.twig
@@ -24,7 +24,7 @@
 		<div class="row">
 			{% for film in latestFilms %}
 				<div class="col-md-4">
-					<div class="card mb-4">
+<div class="card mb-4 slide-up">
 {% set firstImage = film.getImages()|first %}
                     <a href="{{ path('app_film_detail', {'id': film.id}) }}">
                         <img src="{{ firstImage ? asset('assets/img/' ~ firstImage.getPhoto()) : asset('assets/img/default/image.jpg') }}" alt="Image de {{ film.name }}" class="card-img-top film-image">
