--- a/templates/films/popular.html.twig
+++ b/templates/films/popular.html.twig
@@ -21,7 +21,7 @@
         <div class="row">
             {% for film in films %}
                 <div class="col-md-4">
-                    <div class="card mb-4">
+<div class="card mb-4 slide-up">
                         {% set firstImage = film.getImages()|first %}
                     <a href="{{ path('app_film_detail', {'id': film.id}) }}">
                         <img src="{{ firstImage ? asset('assets/img/' ~ firstImage.getPhoto()) : asset('assets/img/default/image.jpg') }}" alt="Image de {{ film.name }}" class="card-img-top film-image">
