--- a/templates/listefilm.html.twig
+++ b/templates/listefilm.html.twig
@@ -18,7 +18,7 @@
                         </div>
                         <div class="row">
                             {% for film in popularFilms %}
-                                <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-lg-4 col-md-6 col-sm-6 animate-from-bottom">
                                     <div class="product__item">
                                         <a href="{{ path('app_film_detail', {'id': film.id}) }}">
                                             <img src="{{ asset('assets/img/' ~ (film.getImages()|first).getPhoto()) }}" alt="Image de {{ film.name }}" class="product__item__pic">
