--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -15,6 +15,8 @@
                             <li><a href="{{ path('app_login') }}" style="color: white;">Connexion</a></li>
                             <li><a href="{{ path('app_register') }}" style="color: white;">Inscription</a></li>
                         {% endif %}
+                        <!-- Ajout du lien vers la page de suggestion -->
+                        <li><a href="{{ path('app_suggestion') }}" style="color: white;">Suggérer un film</a></li>
                     </ul>
                 </div>
             </div>
