--- a/templates/admin/suggestions.html.twig
+++ b/templates/admin/suggestions.html.twig
@@ -11,7 +11,7 @@
                 <th>ID</th>
                 <th>Titre</th>
                 <th>Message</th>
-                <th>Nom du suggesteur</th>
+                <th>Nom</th>
             </tr>
         </thead>
         <tbody>
