--- a/templates/films/latest_releases.html.twig
+++ b/templates/films/latest_releases.html.twig
@@ -40,7 +40,7 @@
                     </div>
                 </div>
 			{% else %}
-				<p>Aucun film n'a été trouvé.</p>
+				<p>Aucun film n'a été trouvé</p>
 			{% endfor %}
 		</div>
 	</div>
